- R's x11 windows now handle their events
- fixed bug in the output (no update on empty output)
- paste in the console is properly handled
- r console and watch divorced
- console can handle incomplete statements (allowing multi-line input)
- fixed silly crash on incomplete statements
- updated spanish translation
- new plugin (graph)
- reworked the interface to use kparts properly

--- Version 0.3.1 - Mar-26-2005
- added the possibility to unable widget in plugins.
- added a new plugin (basic statistics)
- added icons in the object browser
- using IDEAI dock mode style
- new, console-like widget to enter commands manually.
- added a class to show html help in an mdi child
- added a new dock to search R help
- many changes in labels
- fixed: bug that prevented RKWard to build on some systems
- added R functions to show graphs in the html output and to print objects (using E. Lecoutre's R2HTML)
- use a KHTML part to show output (instead of the qt widget)

--- Version 0.3.0 - Nov-12-2004
- added french and italian translations
- added toolbars and some icons
- some small i18n fixes
- rework of user interface (now using KMDI and IDEAl mode)
- compilation fix for R 2.0
- added basic per variable formatting options in the data editor (alignment, precision)
- fixed: cell last edited did not react to single mouse click
- fixed: switched to line below after a new row was automatically added
- fixed: cursor right did not move to next cell when editing last (active) column
- while editing, tab-key moves to next cell

--- Version 0.2.9 - Sep-22-2004
- use KDialog::marginHint () and KDialog::spacingHint () in plugins
- fixed a crash in the formula widget
- converted plugin element to QWidgets (in preparation for more extensive rework of plugin elements)
- almost complete rework of data editor
- added edit support for factors
- added support for editing factor levels
- data editor stores data more efficiently