@@ -1,5 +1,10 @@
 INCLUDES = $(all_includes)
 METASOURCES = AUTO
 noinst_LIBRARIES =  libsettings.a
-libsettings_a_SOURCES = rksettings.cpp rksettingsmodule.cpp rksettingsmodulelogfiles.cpp rksettingsmoduleoutput.cpp rksettingsmodulephp.cpp rksettingsmoduleplugins.cpp rksettingsmoduler.cpp rksettingsmodulewatch.cpp
-noinst_HEADERS = rksettings.h rksettingsmodule.h rksettingsmodulelogfiles.h rksettingsmoduleoutput.h rksettingsmodulephp.h rksettingsmoduleplugins.h rksettingsmoduler.h rksettingsmodulewatch.h
+libsettings_a_SOURCES = rksettings.cpp rksettingsmodule.cpp \
+	rksettingsmodulelogfiles.cpp rksettingsmoduleoutput.cpp rksettingsmodulephp.cpp \
+	rksettingsmoduleplugins.cpp rksettingsmoduler.cpp rksettingsmodulewatch.cpp \
+	rksettingsmoduleobjectbrowser.cpp
+noinst_HEADERS = rksettings.h rksettingsmodule.h rksettingsmodulelogfiles.h \
+	rksettingsmoduleoutput.h rksettingsmodulephp.h rksettingsmoduleplugins.h rksettingsmoduler.h \
+	rksettingsmodulewatch.h rksettingsmoduleobjectbrowser.h
