@@ -25,13 +25,14 @@
 #include <qlabel.h>
 
 #include "../misc/getfilenamewidget.h"
+#include "../rkglobals.h"
 
 // static members
 QString RKSettingsModulePHP::php_bin;
 QString RKSettingsModulePHP::files_path;
 
 RKSettingsModulePHP::RKSettingsModulePHP (RKSettings *gui, QWidget *parent) : RKSettingsModule (gui, parent) {
-	QVBoxLayout *main_vbox = new QVBoxLayout (this, 6);
+	QVBoxLayout *main_vbox = new QVBoxLayout (this, RKGlobals::marginHint ());
 	QLabel *label = new QLabel (i18n ("Changes in this section take effect the next time you start a plugin"), this);
 	label->setAlignment (Qt::AlignAuto | Qt::AlignVCenter | Qt::ExpandTabs | Qt::WordBreak);
 	main_vbox->addWidget (label);
