@@ -1,3 +1,4 @@
+- settings dialog honore KDE-button order
 - R's x11 windows now handle their events
 - fixed bug in the output (no update on empty output)
 - paste in the console is properly handled
